Bug 394299 - Wet type color mixture of brushes
Summary: Wet type color mixture of brushes
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush Engine/Bristle (other bugs)
Version First Reported In: 4.0.3
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Emmet O'Neill
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2018-05-16 01:05 UTC by cok_dream
Modified: 2018-11-20 11:47 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of issue (163.08 KB, image/png)
2018-09-29 02:00 UTC, Andrew Crouthamel
Details
[^ Gif anim of the bug ] (736.39 KB, image/gif)
2018-10-11 17:23 UTC, David REVOY
Details

Note You need to log in before you can comment on or make changes to this bug.
Description cok_dream 2018-05-16 01:05:15 UTC
This is a bug caused by the wet_Bristles brush.
If you draw on a transparently protected layer, it picks up black from the transparent part and it will be mixed.
This is not a phenomenon that occurs only in the current version, but it existed from a long ago version. Previously it was white.
I do not know whether it is a bug or a specification,It is very hard to use, so I'd like to ask you to fix it.
Comment 1 Halla Rempt 2018-09-01 12:02:26 UTC
Hi,

I'm sorry, but I don't seem to be able to reproduce this issue. Maybe I'm doing something wrong, so could you make a screen recording for us to check?
Comment 2 cok_dream 2018-09-02 09:44:14 UTC
Thank you for your reply.

Because I did not know how to describe screenshots,
I uploaded it to my drop box.
The following addresses are images.
https://www.dropbox.com/s/3v69jlpev4fboey/01.png?dl=0

The version of krita is the latest 4.1.1.

(In reply to Boudewijn Rempt from comment #1)
> Hi,
> 
> I'm sorry, but I don't seem to be able to reproduce this issue. Maybe I'm
> doing something wrong, so could you make a screen recording for us to check?
Comment 3 Andrew Crouthamel 2018-09-28 03:28:49 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least 15 days. Please provide the requested information as soon as possible and set the bug status as REPORTED. Due to regular bug tracker maintenance, if the bug is still in NEEDSINFO status with no change in 30 days, the bug will be closed as RESOLVED > WORKSFORME due to lack of needed information.

For more information about our bug triaging procedures please read the wiki located here: https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please set the bug status as REPORTED so that the KDE team knows that the bug is ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 4 cok_dream 2018-09-29 01:21:18 UTC
Thank you for your reply.
I am Japanese and I am not good at English.
Because it is difficult to decipher the wiki that you mentioned, it is not likely to be able to report any further bugs.

I hope this bug will be found by someone other than me and will be modified someday.
Comment 5 Andrew Crouthamel 2018-09-29 01:59:45 UTC
Thank you, I'll move this to Reported and attach your screenshot for you.
Comment 6 Andrew Crouthamel 2018-09-29 02:00:04 UTC
Created attachment 115303 [details]
Screenshot of issue
Comment 7 cok_dream 2018-09-29 03:32:12 UTC
Thank you very much.
Comment 8 David REVOY 2018-10-11 17:23:02 UTC
Created attachment 115574 [details]
[^ Gif anim of the bug ]

Hi, I was able to reproduce the bug on git~master 539f7d07e

To reproduce:
=============
1. Create a 100% alpha canvas.
2. Paint/Draw a shape in a color (eg.pink)
3. In layer stack, 'lock alpha'.
4. Select i)Wet_Bristtle brush presets
5. Paint with another color (eg. yellow) from alpha area to inside the shape.

Result: visible on the gif animation.

Expected: No black color in resulting color.
Comment 9 cok_dream 2018-10-12 00:15:18 UTC
Yes, this is my bug in krita.


(In reply to David REVOY from comment #8)
> Created attachment 115574 [details]
> [^ Gif anim of the bug ]
> 
> Hi, I was able to reproduce the bug on git~master 539f7d07e
> 
> To reproduce:
> =============
> 1. Create a 100% alpha canvas.
> 2. Paint/Draw a shape in a color (eg.pink)
> 3. In layer stack, 'lock alpha'.
> 4. Select i)Wet_Bristtle brush presets
> 5. Paint with another color (eg. yellow) from alpha area to inside the shape.
> 
> Result: visible on the gif animation.
> 
> Expected: No black color in resulting color.
Comment 10 Emmet O'Neill 2018-10-12 08:44:26 UTC
Confirming this bug, I'll be taking a look at it.

Thank you for reporting!
Comment 11 Emmet O'Neill 2018-10-12 18:22:41 UTC
Git commit ce8254dc5ea702f3f49efe0d2273ab91cf06c0ac by Emmet O'Neill.
Committed on 12/10/2018 at 18:21.
Pushed by emmetoneill into branch 'master'.

Color smudge brushes now work properly in combination with alpha lock.

The COMPOSITE_COPY operation has now been refactored and there should
no longer be black artifacts when smudging from a transparent area to an
opaque area on a layer with a locked alpha channel.

Hurray! Thanks for the help, Dmitry!

M  +31   -35   libs/pigment/compositeops/KoCompositeOpCopy2.h
M  +17   -17   plugins/paintops/colorsmudge/kis_colorsmudgeop.cpp

https://commits.kde.org/krita/ce8254dc5ea702f3f49efe0d2273ab91cf06c0ac
Comment 12 cok_dream 2018-10-13 00:20:50 UTC
Thank you!

I find this software useful for both work and graffiti.
I am looking forward to the next update.
Comment 13 Halla Rempt 2018-11-20 08:57:03 UTC
Git commit 18a5725407825bc6277ddf3579d41b186980af1e by Boudewijn Rempt, on behalf of Emmet O'Neill.
Committed on 20/11/2018 at 08:21.
Pushed by rempt into branch 'krita/4.1'.

Color smudge brushes now work properly in combination with alpha lock.

The COMPOSITE_COPY operation has now been refactored and there should
no longer be black artifacts when smudging from a transparent area to an
opaque area on a layer with a locked alpha channel.

Hurray! Thanks for the help, Dmitry!

M  +31   -35   libs/pigment/compositeops/KoCompositeOpCopy2.h
M  +17   -17   plugins/paintops/colorsmudge/kis_colorsmudgeop.cpp

https://commits.kde.org/krita/18a5725407825bc6277ddf3579d41b186980af1e
Comment 14 cok_dream 2018-11-20 11:47:22 UTC
Thank you!!
I appreciate measures!