Color smudge brushes now work properly in combination with alpha lock.

The COMPOSITE_COPY operation has now been refactored and there should
no longer be black artifacts when smudging from a transparent area to an
opaque area on a layer with a locked alpha channel.

Hurray! Thanks for the help, Dmitry!

BUG:394299